Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-22583

CMake as symbollink doesn't work

    XMLWordPrintable

Details

    • macOS

    Description

      CMake (newer version) cannot be executed by symbollink. It gives you an error about not finding the root.

       

      I suggest giving a warning in the Kits window that you selected a symbolic link and that this error might happen.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            hunger Tobias Hunger
            stefandxm stefan karlsson
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes